--- a/task1/bower.json
+++ b/task1/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "system.js": "~0.17.1",
-    "traceur": "~0.0.90"
+    "traceur": "~0.0.90",
+    "bootstrap": "~3.3.4"
   }
 }
