--- a/task3/bower.json
+++ b/task3/bower.json
@@ -13,6 +13,7 @@
     "tests"
   ],
   "dependencies": {
+    "bootstrap": "~3.3.4",
     "soyutils": "2014.04.22",
     "system.js": "~0.17.1",
     "traceur": "~0.0.90",
